; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijksdl/extr_ijksdl_aout.c_SDL_AoutSetDefaultLatencySeconds.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijksdl/extr_ijksdl_aout.c_SDL_AoutSetDefaultLatencySeconds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { double, i32 (%struct.TYPE_4__*, double)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SDL_AoutSetDefaultLatencySeconds(%struct.TYPE_4__* %0, double %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca double, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store double %1, double* %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = icmp ne %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %23

7:                                                ; preds = %2
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %10 = load i32 (%struct.TYPE_4__*, double)*, i32 (%struct.TYPE_4__*, double)** %9, align 8
  %11 = icmp ne i32 (%struct.TYPE_4__*, double)* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %7
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i32 (%struct.TYPE_4__*, double)*, i32 (%struct.TYPE_4__*, double)** %14, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = load double, double* %4, align 8
  %18 = call i32 %15(%struct.TYPE_4__* %16, double %17)
  br label %19

19:                                               ; preds = %12, %7
  %20 = load double, double* %4, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  store double %20, double* %22, align 8
  br label %23

23:                                               ; preds = %19, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
